# led-ticker-feeds

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/demos/: widget-rss.toml
docs/superpowers/plans/: 2026-06-16-rss-feed-extraction-feeds-plugin.md  2026-06-16-weather-extraction-feeds-plugin.md
docs/superpowers/specs/: 2026-06-16-rss-feed-extraction-feeds-plugin-design.md  2026-06-16-weather-extraction-feeds-plugin-design.md
src/led_ticker_feeds/: __init__.py  rss.py  weather.py
tests/: conftest.py  test_import_purity.py  test_rss.py  test_smoke.py  test_weather.py  test_weather_icons.py
